--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </div>
           </div>
           <div class ="personImg" >
-          <img class = "imgImage" src="./img/newUser.jpg">
+          <img class = "imgImage" src="/img/newUser.jpg">
         </div>
       </div>
         <div class="infoBox">
@@ -97,12 +97,11 @@
         <input type="text" name="education" id="education-field">
         <label for="work-field">Work Experience</label>
         <input type="text" name="workExperience" id="work-field">        
-        <input type="submit" value="submit" id="submit-button" />
+        <input type="submit" value="submit" id="submit-button"/>
       </form>
     </div>
     </div>
   </div>
     <script type="module" src="./script.js"></script>
 </body>
-
 </html>
